--- a/public/index.html
+++ b/public/index.html
@@ -4,12 +4,34 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Installing Tailwind CSS as PostCSS Plugin with JIT</title>
-    <link rel="stylesheet" href="styles.css" />
+    <title>Tailwind Labs</title>
+    <link rel="stylesheet" href="styles.css" /> 
   </head>
-  <body>
-    <h1 class="font-bold text-4xl text-center pt-14 text-red-600">
-      Taillwind Postcss
-    </h1>
+  <body class="min-h-screen max-w-5xl mx-auto py-16 px-8">
+    <h1 class="text-2xl font-medium text-center">Learn & Explore Tailwind Labs</h1>
+    <div class="max-w-lg sm:max-w-none mx-auto grid sm:grid-cols-2 sm:place-items-center mt-4">
+      <div>
+        <h1 class="text-xl font-semibold text-blue-900">Project</h1>
+        <ul class="list-disc flex flex-col ml-5">
+          <li>
+            <a class="text-purple-900 hover:text-purple-700" href="./views/youtube-thumbnail.html">youtube-thumbnail</a>
+          </li>
+          <li>
+            <a class="text-purple-900 hover:text-purple-700" href="./views/responsive-tile-grid.html">responsive-tile-grid</a>
+          </li>
+        </ul>
+      </div>
+      <div>
+        <h1 class="text-xl font-semibold text-blue-900">Project Z</h1>
+        <ul class="list-disc flex flex-col ml-5">
+          <li>
+            <a class="text-purple-900 hover:text-purple-700" href="#">xxx-xxx-xxx</a>
+          </li>
+          <li>
+            <a class="text-purple-900 hover:text-purple-700" href="#">xxx-xxx-xxx</a>
+          </li>
+        </ul>
+      </div>
+    </div>
   </body>
 </html>
